src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbuffer_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbuffer_StringErrorContext.class */
public final class GLXSGIXPbuffer_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglXCreateGLXPbufferSGIX(JJIIJ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        methods.put("glXCreateGLXPbufferSGIX(JJIILjava/nio/IntBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        methods.put("glXDestroyGLXPbufferSGIX(JJ)V", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        methods.put("nglXQueryGLXPbufferSGIX(JJIJ)V", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        methods.put("glXQueryGLXPbufferSGIX(JJILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        methods.put("glXSelectEventSGIX(JJJ)V", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        methods.put("nglXGetSelectedEventSGIX(JJJ)V", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        methods.put("glXGetSelectedEventSGIX(JJLorg/lwjgl/CLongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        methods.put("glXCreateGLXPbufferSGIX(JJII[I)J", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        methods.put("glXQueryGLXPbufferSGIX(JJI[I)V", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXPbufferErrorContext");
        return methods;
    }
}
